src/test/ui/issues/issue-33504.stderr
error[E0308]: mismatched types
  --> $DIR/issue-33504.rs:7:13
   |
LL |         let Test = 1;
   |             ^^^^ expected integer, found struct `Test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
